Corrige configuração de CORS e URL da API para funcionar com o domínio do EasyPanel

--- a/client/index.html
+++ b/client/index.html
@@ -221,7 +221,7 @@
     let currentTrackIndex = 0;
     let audioPlayer = new Audio();
     let isPlaying = false;
-    let apiUrl = 'http://localhost:5000/api';
+    let apiUrl = 'https://myradio.h4xd66.easypanel.host/api';
 
     // Elementos do DOM
     const loginSection = document.getElementById('loginSection');
