--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MyRadio - Rádio Interna</title>
+  <link rel="icon" type="image/x-icon" href="https://cdn-icons-png.flaticon.com/512/2972/2972545.png">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
   <style>
@@ -568,7 +569,12 @@
           },
           body: JSON.stringify({ name, email, password })
         })
-        .then(response => response.json())
+        .then(response => {
+          if (!response.ok) {
+            throw new Error('Erro na resposta do servidor');
+          }
+          return response.json();
+        })
         .then(data => {
           if (data.success) {
             localStorage.setItem('myRadioToken', data.token);
@@ -580,7 +586,10 @@
             alert(data.message || 'Erro ao registrar');
           }
         })
-        .catch(error => console.error('Erro no registro:', error));
+        .catch(error => {
+          console.error('Erro no registro:', error);
+          alert('Erro ao conectar com o servidor. Por favor, tente novamente.');
+        });
       });
       
       // Controles do player
