Corrige URLs da API em todos os arquivos para usar o domínio do EasyPanel

--- a/admin/index.html
+++ b/admin/index.html
@@ -251,7 +251,7 @@
     let isLoggedIn = false;
     let currentUser = null;
     let userRadios = [];
-    let apiUrl = 'http://localhost:5000/api';
+    let apiUrl = 'https://myradio.h4xd66.easypanel.host/api';
 
     // Elementos DOM
     const loginSection = document.getElementById('loginSection');
