Fix API connection issues and add local API configuration

--- a/client/index.html
+++ b/client/index.html
@@ -6,8 +6,11 @@
   <title>VirtualRadio</title>
   <link rel="stylesheet" href="styles.css">
   
-  <!-- Script de configuração da API -->
-  <script src="api-config.js"></script>
+  <!-- Script de configuração da API local (substitui a configuração remota) -->
+  <script src="api-config.local.js"></script>
+  
+  <!-- Script de configuração da API remota (mantido para referência) -->
+  <!-- <script src="api-config.js"></script> -->
 </head>
 <body>
   <div id="app">
